--- a/res/layout/dialog_firmware_version.xml
+++ b/res/layout/dialog_firmware_version.xml
@@ -54,13 +54,13 @@
 
         <TextView
             style="@style/device_info_dialog_label"
-            android:id="@+id/extended_version_label"
+            android:id="@+id/aosep_version_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/extended_version"/>
         <TextView
             style="@style/device_info_dialog_value"
-            android:id="@+id/extended_version_value"
+            android:id="@+id/aosep_version_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
