--- a/res/values/ex_strings.xml
+++ b/res/values/ex_strings.xml
@@ -16,7 +16,7 @@
     <!-- About phone screen, Extended version -->
     <string name="extended_version">Extended version</string>
     <string name="extended_version_default">Unknown</string>
-    <string name="keywords_extended_version">aex version, extended version</string>
+    <string name="keywords_extended_version">aosep version, extended version</string>
 
     <!-- About phone screen, build date -->
     <string name="build_date">Build date</string>
@@ -31,11 +31,11 @@
     <!-- Manage applications, package string displayed in app snippet -->
     <string name="packagename_text"><xliff:g id="package_name">%1$s</xliff:g></string>
 
-    <!-- About AospExtended -->
-    <string name="aex_about_info">About us</string>
-    <string name="aex_about_summary">Our introduction and our team</string>
-    <string name="aex_about_info_summary">AOSP Extended is an AOSP based ROM which provides stock UI/UX experience with useful customizations. Being based on AOSP it provides a smooth experience. We have added useful customizations from various other open source projects and have tried to keep our things simple. A ROM by a user, for a user.&#35;BeExtended</string>
-    <string name="dev_info">About AospExtended</string>
+    <!-- About aosep -->
+    <string name="aosep_about_info">About us</string>
+    <string name="aosep_about_summary">Our introduction and our team</string>
+    <string name="aosep_about_info_summary">AOSEP is an AOSP based custom Android firmware version which provides stock UI/UX experience with useful customizations. Being based on AOSP it provides a smooth and lag-free experience. We have added useful customizations and have tried to keep our things simple ans up-to-date.we intended to support older devices which still had good hardware but has outdated software and security levels.</string>
+    <string name="dev_info">About aosep</string>
     <string name="github">Github</string>
     <string name="github_description">View our source code</string>
     <string name="gplus">Google+</string>
@@ -44,48 +44,35 @@
     <string name="telegram_description">Subscribe to our Telegram channel</string>
     <string name="web">Download Center</string>
     <string name="web_description">Visit our download portal</string>
-    <string name="help_translate">Translations</string>
-    <string name="help_translate_description">Translate to your language, visit our Crowdin</string>
-    <string name="walls">Wallpapers</string>
-    <string name="walls_description">Get wallpapers contributed by various users</string>
+    
+    
+    
+    
     <string name="leads">Team Leads</string>
-    <string name="team_1">Shubham Singh &#40;ishubhamsingh&#41;</string>
-    <string name="team1_description">Owner/Lead Developer</string>
-    <string name="team_2">Aman Kumar &#40;FireLord&#41;</string>
+    <string name="team_1">Anis Noorudheen P</string>
+    <string name="team1_description">Lead Developer</string>
+    <string name="team_2">Ameera V A</string>
     <string name="team2_description">Developer</string>
-    <string name="team_3">Amol Amrit</string>
-    <string name="team3_description">Moderator and Developer</string>
-    <string name="team_4">Henrique Silva &#40;jhenrique09&#41;</string>
-    <string name="team4_description">Developer</string>
-    <string name="designers">Designers</string>
-    <string name="designer_1">Yasan &#40;AlienCreature7&#41;</string>
-    <string name="designer1_description">Thread Banners, Logos, Wallpapers</string>
-    <string name="designer_2">Savio &#40;Wizper99&#41;</string>
-    <string name="designer2_description">QS/Fling logos</string>
-    <string name="designer_3">Jesus R &#40;KrapK&#41;</string>
-    <string name="designer3_description">Wallpapers, Bootanimations</string>
-    <string name="designer_4">Harsh V23</string>
-    <string name="designer4_description">Extensions UI, Icons</string>
-    <string name="designer_5">Gaurav (allstargaurav)</string>
-    <string name="designer5_description">Extensions UI, Icons and Clock styles</string>
-    <string name="designer_6">Edoardo Zullo (Mithrandirx96)</string>
-    <string name="designer6_description">New Bootanimation</string>
-    <string name="maintainers">Maintainers</string>
-    <string name="maintainers_title">Official maintainers</string>
-    <string name="maintainers_summary">Officially supported devices and their respective maintainers.</string>
+    <string name="team_3">Arsha Prasad</string>
+    <string name="team3_description">Moderator</string>
+    <string name="team_4">Iris Anna Peter</string>
+    <string name="team4_description">PR head and source maintainer</string>
+    <string name="Mentors">Mentors</string>
+    <string name="designer_1">Mrs Anjaly Krishnan</string>
+    <string name="designer1_description">Our project guide</string>
+    <string name="designer_2">Mr Roshan Prem</string>
+    <string name="designer2_description">Project coordinator 1</string>
+    <string name="designer_3">Mrs.Chithra Ajith</string>
+    <string name="designer3_description">Project coordinator 2</string>
+    <string name="designer_4">Mr.Jeejo K P</string>
+    <string name="designer4_description">HOD, ECE</string>
+    <string name="designer_5">Mr.Nikhil C R</string>
+    <string name="designer5_description">Our former HOD and guide</string>
+    <string name="designer_6">Mrs.Neenu P A</string>
+    <string name="designer6_description">Our first guide and mentor</string>
 
-    <!-- Maintainer section -->
-    <string name="maintainer_description">Maintainer: %1$s</string>
-    <string name="loading_devices">Loading devices list...</string>
-    <string name="loading_devices_failed">Failed to load devices list</string>
-    <string name="devices_list_empty">List is empty, tap the icon to reload</string>
-    <string name="reload_list">Reload</string>
 
-    <!-- Changelog -->
-    <string name="changelog_title">Changelog</string>
-    <string name="changelog_summary">Recent Changes</string>
-    <string name="changelog_loading">Loading changelog\u2026</string>
-    <string name="changelog_error">Unable to load changelog</string>
+    
 
     <!-- Scramble PIN Layout on Lockscreen -->
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
