--- a/res/xml/about_us.xml
+++ b/res/xml/about_us.xml
@@ -221,5 +221,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
      </Preference>
 
 </PreferenceCategory>
+                                                                                   
+       </PreferenceScreen>                                                                            
 
 
