--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -29,19 +29,12 @@
 
     <!-- About us -->
     <Preference
-        android:key="aex_about_info"
+        android:key="aosep_about_info"
         android:order="1"
-        android:title="@string/aex_about_info"
-	android:summary="@string/aex_about_summary"
+        android:title="@string/aosep_about_info"
+	android:summary="@string/aosep_about_summary"
         android:fragment="com.android.settings.AboutUs" />
 
-    <!-- Changelog -->
-    <Preference
-        android:key="changelog"
-        android:order="2"
-        android:title="@string/changelog_title"
-        android:summary="@string/changelog_summary"
-        android:fragment="com.android.settings.extended.Changelog" />
 
     <!-- Device name -->
     <com.android.settings.widget.ValidatedEditTextPreference
