--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -23,20 +23,13 @@
 
     <!-- About us -->
     <Preference
-        android:key="aex_about_info"
+        android:key="aosep_about_info"
         android:order="0"
-        android:title="@string/aex_about_info"
-	android:summary="@string/aex_about_summary"
+        android:title="@string/aosep_about_info"
+	android:summary="@string/aosep_about_summary"
         android:fragment="com.android.settings.AboutUs" />
 
-    <!-- Changelog -->
-    <Preference
-        android:key="changelog"
-        android:order="1"
-        android:title="@string/changelog_title"
-	android:summary="@string/changelog_summary"
-        android:fragment="com.android.settings.extended.Changelog" />
-
+    
     <!-- Phone number -->
     <Preference
         android:key="phone_number"
