--- a/res/xml/about_us.xml
+++ b/res/xml/about_us.xml
@@ -52,28 +52,19 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     android:icon="@drawable/ic_web" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https://androidfilehost.com/user/?w=settings-dev-files&flid=292534/" />
+               android:data="https://github.com/aosep/download/" />
         </Preference>
 
-        <Preference
-            android:title="@string/help_translate"
-    android:summary="@string/help_translate_description"
-    android:icon="@drawable/ic_trans" >
-    <intent
-               android:action="android.intent.action.VIEW"
-               android:data="http://translate.aospextended.com/" />
-        </Preference>
+        
 
-        <Preference
-            android:title="@string/walls"
-    android:summary="@string/walls_description"
-    android:icon="@drawable/ic_walls" >
-    <intent
-               android:action="android.intent.action.VIEW"
-               android:data="http://aospextended.imgur.com/" />
-        </Preference>
+       
+    
+               
+     
+               
 
-     </PreferenceCategory>
+
+     </PreferenceCategory
 
 <PreferenceCategory
               android:key="leads"
@@ -193,10 +184,11 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                android:data="bhttp://plus.google.com/100866392291383803831" />
       </Preference>
 
+      
       <Preference
             android:title="@string/designer_4"
     android:summary="@string/designer4_description"
-    android:icon="@drawable/ic_design">
+    android:icon="@drawable/ic_design">">
     <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/+HarshV23" />
@@ -209,7 +201,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https
+               android:data="https://github.com/aosep
+                             </Preference>
 
       <Preference
             android:title="@string/designer_6"
