--- a/res/xml/about_us.xml
+++ b/res/xml/about_us.xml
@@ -1,227 +1,234 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2017 AospExtended ROM Project
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
+<?xml version="1.0" encoding="utf-8"?> <!-- 
+Copyright (C) 2017 AospExtended ROM Project
+     Licensed under the Apache License, 
+Version 2.0 (the "License");
+     you may not use this file except in 
+compliance with the License.
      You may obtain a copy of the License at
           http://www.apache.org/licenses/LICENSE-2.0
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-
-<PreferenceScreen
+     Unless required by applicable law or 
+agreed to in writing, software
+     distributed under the License is 
+distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY 
+KIND, either express or implied.
+     See the License for the specific language 
+governing permissions and
+     limitations under the License. --> 
+<PreferenceScreen 
 xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="@string/aosep_about_info">
-
+        
+android:title="@string/aosep_about_info"> 
 <PreferenceCategory
               android:key="about"
-              android:title="@string/dev_info" >
-
+              android:title="@string/dev_info" 
+>
         <Preference
-    android:summary="@string/aosep_about_info_summary" >
+    android:summary="@string/aosep_about_info_summary" 
+>
             <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/aosep" />
+               android:data="http://github.com/aosep" 
+/>
       </Preference>
-
         <Preference
             android:title="@string/github"
     android:summary="@string/github_description"
     android:icon="@drawable/ic_github" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/aosep" />
+               android:data="http://github.com/aosep" 
+/>
         </Preference>
-
         
-
         <Preference
             android:title="@string/telegram"
     android:summary="@string/telegram_description"
     android:icon="@drawable/ic_telegram" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://telegram.me/aosep" />
+               android:data="http://telegram.me/aosep" 
+/>
         </Preference>
-
         <Preference
             android:title="@string/web"
     android:summary="@string/web_description"
     android:icon="@drawable/ic_web" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https://androidfilehost.com/user/?w=settings-dev-files&flid=292534/" />
+               android:data="https://github.com/aosep/download/" 
+/>
         </Preference>
 
-        <Preference
-            android:title="@string/help_translate"
-    android:summary="@string/help_translate_description"
-    android:icon="@drawable/ic_trans" >
+<Preference
+            android:title="@string/telegram"
+    android:summary="@string/telegram_description"
+    android:icon="@drawable/ic_telegram" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://translate.aospextended.com/" />
+               android:data="http://telegram.me/aosep" 
+/>
         </Preference>
-
         <Preference
-            android:title="@string/walls"
-    android:summary="@string/walls_description"
-    android:icon="@drawable/ic_walls" >
+            android:title="@string/web"
+    android:summary="@string/web_description"
+    android:icon="@drawable/ic_web" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://aospextended.imgur.com/" />
-        </Preference>
-
+               android:data="https://github.com/aosep/download/"/>
+        </Preference> 
+              
      </PreferenceCategory>
-
-<PreferenceCategory
-              android:key="leads"
+    
+     <PreferenceCategory
+             
+               android:key="leads"
               android:title="@string/leads" >
-
         <Preference
-            android:title="@string/team_1"
+           
+ android:title="@string/team_1"
     android:summary="@string/team1_description"
     android:icon="@drawable/ic_devs" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/anisnoorudheen" />
+               android:data="http://github.com/anisnoorudheen"/>
         </Preference>
-
        <Preference
             android:title="@string/team_2"
     android:summary="@string/team2_description"
     android:icon="@drawable/ic_devs" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/ameerava" />
+               android:data="http://github.com/ameerava" 
+/>
         </Preference>
-
        <Preference
             android:title="@string/team_3"
     android:summary="@string/team3_description"
     android:icon="@drawable/ic_devs" >
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/arshaprasad" />
+               android:data="http://github.com/arshaprasad" 
+/>
         </Preference>
-
        <Preference
             android:title="@string/team_4"
     android:summary="@string/team4_description"
     android:icon="@drawable/ic_devs">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/irisanna1607" />
-      </Preference>
-
-
-</PreferenceCategory>
-
+               android:data="http://github.com/irisanna1607" 
+/>
+      </Preference> </PreferenceCategory> 
 <PreferenceCategory
               android:key="Mentors"
-              android:title="@string/Mentors" >
-
+              android:title="@string/Mentors" 
+>
        <Preference
             android:title="@string/designer_1"
     android:summary="@string/designer1_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/Aliencreature7" />
+               android:data="http://github.com/Aliencreature7" 
+/>
       </Preference>
-
        <Preference
             android:title="@string/designer_2"
     android:summary="@string/designer2_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/Wizper99" />
+               android:data="http://github.com/Wizper99" 
+/>
       </Preference>
-
        <Preference
             android:title="@string/designer_3"
     android:summary="@string/designer3_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://plus.google.com/100866392291383803831" />
+               android:data="http://plus.google.com/100866392291383803831" 
+/>
       </Preference>
-
       <Preference
             android:title="@string/designer_4"
     android:summary="@string/designer4_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https://plus.google.com/+HarshV23" />
+               android:data="https://plus.google.com/+HarshV23" 
+/>
      </Preference>
-
-
+    
       <Preference
             android:title="@string/designer_5"
     android:summary="@string/designer5_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https://github.com/allstargaurav" />
-     </Preference>Preference
+               android:data="https://github.com/allstargaurav" 
+/>
+     </Preference>
+      <Preference
             android:title="@string/designer_1"
     android:summary="@string/designer1_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/Aliencreature7" />
-      </Preference>
+               android:data="http://github.com/Aliencreature7"/>
 
-       <Preference
+      </Preference>
+       
+        <Preference
             android:title="@string/designer_2"
     android:summary="@string/designer2_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="http://github.com/Wizper99" />
+               android:data="http://github.com/Wizper99" 
+/>
       </Preference>
-
        <Preference
             android:title="@string/designer_3"
     android:summary="@string/designer3_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="bhttp://plus.google.com/100866392291383803831" />
+               android:data="bhttp://plus.google.com/100866392291383803831" 
+/>
       </Preference>
-
+      
       <Preference
             android:title="@string/designer_4"
     android:summary="@string/designer4_description"
-    android:icon="@drawable/ic_design">
+    android:icon="@drawable/ic_design">">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https://plus.google.com/+HarshV23" />
+               android:data="https://plus.google.com/+HarshV23" 
+/>
      </Preference>
-
-
+     
       <Preference
             android:title="@string/designer_5"
     android:summary="@string/designer5_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https
+               android:data="https://github.com/ExtendedOS"
+/>
 
-      <Preference
+     </Preference>
+
+         <Preference
             android:title="@string/designer_6"
     android:summary="@string/designer6_description"
     android:icon="@drawable/ic_design">
     <intent
                android:action="android.intent.action.VIEW"
-               android:data="https://forum.xda-developers.com/member.php?u=7820332" />
+               android:data="https://forum.xda-developers.com/member.php?u=7820332" 
+/>
      </Preference>
-
-</PreferenceCategory>
+ </PreferenceCategory>
                                                                                    
-       </PreferenceScreen>                                                                            
-
-
+       </PreferenceScreen>
